Archive2/d7/23de0b4e9bc4e8/output
main.cpp: In function 'int main()':
main.cpp:9:11: error: 'class' tag used in naming 'union T' [-fpermissive]
     class T t;
           ^
main.cpp:1:7: note: 'union T' was previously declared here
 union T
       ^
main.cpp:9:13: warning: unused variable 't' [-Wunused-variable]
     class T t;
             ^
